change logic brand, address, access token to 15m and refresh token 24 hours